# ReverseBenchMark

./: .gitignore  AGENTS.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts
.github/workflows/: build.yml
agent/: go.mod  go.sum  main.go
agent/agent/: agent.go  mcp.go  prompt.go
agent/config/: config.go
agent/pipeline/: pipeline.go
agent/preprocess/: jadx.go  native.go  unpack.go
agent/tools/: chroot.go  execute_python.go  grep_workspace.go  list_dir.go  (+3 more)
app-level0/: build.gradle.kts
app-level1/: build.gradle.kts  proguard-rules.pro
app-level2/: build.gradle.kts  proguard-rules.pro
app-level3/: build.gradle.kts  proguard-rules.pro
app-level4/: build.gradle.kts  proguard-rules.pro
app-level5/: build.gradle.kts  ollvm-toolchain.cmake  proguard-rules.pro
app-level6/: build.gradle.kts  proguard-rules.pro
app-level7/: build.gradle.kts  proguard-rules.pro
app-level8/: build.gradle.kts  proguard-rules.pro
buildSrc/: build.gradle.kts
challenge-core/: build.gradle.kts
challenge-native/: CMakeLists.txt  build.gradle.kts
challenge-native/src/main/cpp/: challenge_bridge.cpp
challenge-native/src/main/cpp/anti_debug/: debugger_detect.cpp  integrity_check.cpp  ptrace_detect.cpp  timing_check.cpp
challenge-native/src/main/cpp/challenges/: algorithm_reversal.cpp  flag_decrypt.cpp  flags.h  license_check.cpp  math_puzzle.cpp  serial_gen.cpp
challenge-native/src/main/cpp/vmp/: vm_interpreter.cpp  vm_opcodes.h
challenge-native/src/main/java/com/benchmark/native_lib/: NativeBridge.kt
evaluation/: evaluate.py  flags.json
scripts/: build_all.sh  compile_vm_bytecode.py  setup_ollvm.sh
(+30 files in other folders)
